# ifopt

./: CMakeLists.txt  README.md
ifopt_core/: CMakeLists.txt  ifopt_coreConfig.cmake.in
ifopt_ipopt/: CMakeLists.txt  ifopt_ipoptConfig.cmake.in
ifopt_ipopt/src/: ipopt_adapter.cc
ifopt_snopt/: CMakeLists.txt
